--- a/index.html
+++ b/index.html
@@ -23,12 +23,17 @@
     </ul>
 
     <h2>Dinner</h2>
-    <ul>
-        <li><a href="https://thewoksoflife.com/beef-with-broccoli-all-purpose-stir-fry-sauce/">Beef & Broccoli</a></li>
-        <li><a href="https://www.joshuaweissman.com/post/chinese-bbq-pork">Chinese BBQ Pork</a></li>
-        <li><a href="https://www.maangchi.com/recipe/galbi-jjim">Braised Beef Shortribs</a></li>
-        <li><a href="https://www.seriouseats.com/the-best-roast-potatoes-ever-recipe">Crispy Roast Potatoes</a></li>
-        <li><a href="https://www.youtube.com/watch?v=T5SYu8tyKjM">Popeyes But Better</a></li>
-    </ul>
+    <h3>Meat</h3>    
+        <ul>
+            <li><a href="https://thewoksoflife.com/beef-with-broccoli-all-purpose-stir-fry-sauce/">Beef & Broccoli</a></li>
+            <li><a href="https://www.joshuaweissman.com/post/chinese-bbq-pork">Chinese BBQ Pork</a></li>
+            <li><a href="https://www.maangchi.com/recipe/galbi-jjim">Braised Beef Shortribs</a></li>
+            <li><a href="https://www.youtube.com/watch?v=T5SYu8tyKjM">Popeyes But Better</a></li>
+        </ul>
+    <h3>Vegtables</h3>
+        <ul>
+            <li><a href="https://www.seriouseats.com/the-best-roast-potatoes-ever-recipe">Crispy Roast Potatoes</a></li>
+        </ul>
+
 </body>
 </html>
