--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jerica's Kitchen</title>
 </head>
 <body>
-    <h1>Jerica's Favorite Recipes</h1>
+    <h1>Jerica's Kitchen</h1>
     <p>These are my favorite recipes</p>
 
     <h2>Breakfast</h2>
+    <ul>
+        <li><a href="https://www.allrecipes.com/recipe/233074/grandads-pancakes/">Grandad's Pancakes</a></li>
+    </ul>
+    
     <h3>Yogurt</h3>
     <ul>
         <li><a href="https://www.olgasflavorfactory.com/recipes/breakfast/instant-pot-greek-yogurt/">Instant Pot Greek Yogurt</a></li>
         <li><a href="https://yogurtnerd.com/what-is-french-style-yogurt-and-how-to-make-it-at-home/">French Style Yogurt</a></li>
     </ul>
+
 
     <h2>Lunch</h2>
     <ul>
@@ -23,17 +28,33 @@
     </ul>
 
     <h2>Dinner</h2>
-    <h3>Meat</h3>    
+    <h3>Meat</h3>
+        <h4>Chicken</h4>    
+            <ul>
+                <li><a href="https://paleomg.com/lemon-honey-rosemary-chicken/">Lemon Honey Rosemary Chicken</a></li>
+            </ul>
         <ul>
             <li><a href="https://thewoksoflife.com/beef-with-broccoli-all-purpose-stir-fry-sauce/">Beef & Broccoli</a></li>
             <li><a href="https://www.joshuaweissman.com/post/chinese-bbq-pork">Chinese BBQ Pork</a></li>
             <li><a href="https://www.maangchi.com/recipe/galbi-jjim">Braised Beef Shortribs</a></li>
             <li><a href="https://www.youtube.com/watch?v=T5SYu8tyKjM">Popeyes But Better</a></li>
         </ul>
+
     <h3>Vegtables</h3>
         <ul>
             <li><a href="https://www.seriouseats.com/the-best-roast-potatoes-ever-recipe">Crispy Roast Potatoes</a></li>
+            <li><a href="https://www.maangchi.com/recipe/sukju-oi-namul">Cucumber & Mung Bean Sprout Salad</a></li>
         </ul>
 
+    <h3>Sides</h3>
+        <ul>
+            <li><a href="https://www.allrecipes.com/recipe/238691/simple-macaroni-and-cheese/">Simple Mac & Cheese</a></li>
+            <li><a href="https://www.allrecipes.com/recipe/240157/loaded-mashed-potatoes/">Loaded Mashed Potatoes</a></li>
+            <li><a href="https://www.allrecipes.com/recipe/14565/naan/">Naan</a></li>
+        </ul>
+    <h3>Soups</h3>
+    <ul>
+        <li><a href="ramen.html">Tonkotsu Ramen</a></li>
+    </ul>
 </body>
 </html>
