--- a/ramen.html
+++ b/ramen.html
@@ -103,7 +103,7 @@
    </div>
    <div class="credits">
         <h3>Credits</h3>
-        This recipe is a mashup of Binging With Babbish's Tare & Noodles and Joshua Weissman's broth. I've also used ---'s write-up of the recipe. 
+        This recipe is a mashup of <a href="https://www.youtube.com/watch?v=jFM_rJ5MtYk">Binging With Babish's Tare & Noodles</a> and <a href="https://www.youtube.com/watch?v=uPqzY8rZLZM">Joshua Weissman's broth</a>. I've also used A is For America's write-up of the recipe. 
     </div>
     </main>
 
